assets/main.css
/* ... */
/* Class for images that shouldn't be scaled but instead have a horizontal scrollbar.
 * They are still centered on wide viewports.  The <img> element should be wrapped in a
 * <div> with the class `scrolled-img-wrapped`. */
.scrolled-img {
  display: block;
  /* Reset some properties set for <img> elements. */
  max-width: initial;
  position: initial;
  left: initial;
  transform: initial;
  vertical-align: initial;
  margin: 0 auto;
}

/* For images that shouldn't be (significantly) wider than the line length.  FIXME: I
 * think small images aren't centered. */
.confined-img {
  display: initial;
  max-width: calc(100% + 4mm);
  position: initial;
  left: initial;
  transform: initial;
  margin: 0 -2mm;
}

/* See <https://css-tricks.com/NetMag/FluidWidthVideo/Article-FluidWidthVideo.php>. */
div.youtube-wrapper {
  position: relative;
  width: calc(100% + 4mm);
  margin: 0 -2mm;
  height: 0;
  padding-bottom: calc(56.25% + 2.25mm); /* (9/16 + 9/16 * 4mm) */
}

iframe.youtube-vid {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 0; /* See <https://stackoverflow.com/q/26274082>. */
}

.post-list-meta {
  color: #666;
  display: table-cell;
  padding-right: .33ch;
}

.post-list-link {
  display: table-cell;
  padding-left: .33ch;
}

.post-meta {
  color: #666;
}

/* Block quotations.  Originally based on the Minima theme [1].  Heavily modified by
 * observing how they are usually typeset in TeX documents:
 *
 * 1. Don't screw with the font color.
 * 2. Probably don't screw with the tracking (letter-spacing).  Especially not using
 *    pixels as the unit.  How is the supposed to be portable?
 * 3. Don't make all of it italic.  That's too much emphasis.
 * 4. Definitely don't combine all of the above.
 *
 * [1]: https://github.com/jekyll/minima/blob/affcd93be22e960afd2be08e6891d99b31bcf920/_sass/minima/_base.scss#L117
 */
blockquote {
  border-left: .3em solid #ddd;
  margin-left: 0;
  margin-right: 0;
  padding-left: 2ch;
  padding-right: 2ch;
}

blockquote:last-child {
  margin-bottom: 0;
}

/* Tables
 *
 * Inspired by booktabs [1] and the Minima theme [2].  FIXME: the text alignment looks
 * stupid when the table only has two columns.
 *
 * [1]: https://ctan.org/pkg/booktabs
 * [2]: https://github.com/jekyll/minima/blob/affcd93be22e960afd2be08e6891d99b31bcf920/_sass/minima/_base.scss#L220
 */
table {
  text-align: center;
  border-collapse: collapse;
  border-top: 2px solid #ccc;
  border-bottom: 2px solid #ccc;
  /* Horizontally center tables but don't stretch them to the width of the main text and
   * add a horizontal scrollbar if the table is too wide.  See [1] and [2].
   *
   * [1]: https://stackoverflow.com/a/30423904
   *      "Add horizontal scrollbar to html table"
   * [2]: https://stackoverflow.com/a/34071945
   *      "Is it possible to center an inline-block element and if so, how?"
   *
   * Additionally, allow tables to be wider than the main text.  See [3], [4], and
   * especially [5].  FIXME: this breaks when there is a non-overlay vertical scrollbar
   * (one that reduces the width of the viewport): the `vw` (viewport width) unit ignores
   * any reduction of the available space by scrollbars.  A workaround (which I'm
   * currently not using) is `body { overflow-y: scroll; }` [3].  It makes the `vw` unit
   * behave sensibly at the cost of always displaying a scrollbar (and it apparently
   * doesn't work in Chrome and Safari [3]).
   *
   * [3]: https://cloudfour.com/thinks/breaking-out-with-viewport-units-and-calc/
   *      "Breaking Out With Viewport Units and Calc"
   * [4]: https://stackoverflow.com/a/24895631
   *      "Is there a way to make a child DIV wider than the parent DIV using CSS?"
   * [5]: https://stackoverflow.com/a/20214782
   *      "Can you make a child div larger than parent without position absolute?"
   */
  display: inline-block; /* TODO: this adds padding at the bottom of the table. */
  overflow-x: auto;
  /* Eventually add a horizontal scrollbar. */
  max-width: calc(100vw - 2mm);
  /* This makes `left: 50vw` work. */
  position: relative;
  /* Move the table so it starts at the very left of the viewport.  This is the real magic
   * because it increases how big the automatically calculated width of the table can be
   * to the viewport width.  Taken from [5].  */
  margin-left: calc(-50vw + 50% - 2mm);
  /* Move the table to the right by half the viewport width.  This will make it start at
   * the center of the viewport when combined with the above line (without it we would use
   * 50%). */
  left: calc(50vw + 2mm);
  /* Finally move the table to the left by half of its width.  This will center it. */
  transform: translateX(-50%);
}

tbody {
  /* This seems to be the default behavior of Firefox but not Chromium: don't wrap text in
   * table cells. */
  white-space: nowrap;
}

td:first-child, th:first-child {
  text-align: left;
  padding-left: 1mm;
}

td:last-child, th:last-child {
  text-align: right;
  padding-right: 1mm;
}

tr:nth-child(even) {
  background-color: #eee;
}

th, td {
  padding: .05em 1ch;
}

th {
  font-weight: normal;
  border-bottom: 1px solid #000;
  padding-top: .2em;
  padding-bottom: .2em;
}

/* Add the same abount of vertical padding below the line that seperates the table heading
 * and data as above.  Actually looks pretty bad because the first row of the table is
 * higher than the rest. */
tbody > tr:first-child > td {
  /* padding-top: .2em; */
}
/* ... */

